// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test AsyncStorageKeys 1`] = `
Object {
  "accountsStore": "accounts_store",
  "authInfo": "auth_info",
  "chatsStorage": "chatsStorage",
  "contacts": "contacts",
  "lastInitMsgTimeout": "lastInitMsgTimeout",
  "profile": "profile",
  "serverInfo": "server_info",
  "users": "users",
  "version": "version",
}
`;

exports[`Test PasscodeStorageKeys 1`] = `
Object {
  "passcode": "passcode",
}
`;

exports[`Test SecureStorageKeys 1`] = `
Object {
  "authJWT": "auth_jwt",
  "firebaseToken": "firebase_token",
  "passcodeHash": "passcode_hash",
  "salt": "salt",
  "seed": "seed",
}
`;

exports[`Test secureOption 1`] = `
Object {
  "service": "com.fractapp",
}
`;
